# INF108

./: .gitignore  README.md  compile.ml  mips.ml  parser.mly  readme
MIPS/: ex1.asm  ex10.asm  ex11.asm  ex2.asm  ex3.asm  ex4.asm  ex5.asm  ex6.asm  ex7.asm  ex9.asm
Projet1/: compile.ml  compileGP.ml  mips.ml  mips.mli  parser.mly  readme
Projet1/tests/: test1.exp  test1.s  test2.exp  test2.s
Projet2/: alu.ml  arithmetique.ml  circuit.ml  circuit.mli  cpu.ml  dune  logique.ml  memory.ml  readme  run_cpu.ml
Projet2/tests/: test_arithmetique.ml  test_memory.ml
Projet3/: ast.ml  lexer.mll  parser.mly  readme  runtime.ml  test.ml
Projet4/: ast.ml  calc.ml  lexer.mll  parser.mly  readme  test.c
